2010-12-02  Valentin Todorov  <valentin.todorov@chello.at>

	* R/ltsReg.R, man/ltsReg.Rd, tests/LTS-specials.R: the raw weights 
	'raw.weights' added to the returned object
	
	* R/ltsReg.R, src/rfltsreg.f, man/ltsReg.Rd: options nsamp="exact" 
	and nsamp="best" fixed; Added 'trace' parameter

2010-12-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/mc-strict.R (adjOutlyingness): adapt tests to the fixed
	mc() code; using some tolerance... still need to be tested on Win/Mac/..

	* R/nlrob.R (summary.nlrob): do not compute 'se' if not converged;
	update help page;
	(print.summary.nlrob): print  "non-convergence"

	* man/summary.nlrob.Rd, man/predict.lmrob.Rd, ..: update and
	trivial changes.

	* R/qnsn.R (Qn): fixed the consistency constant (thanks to Peter
	Ruckdeschel), slightly adapting the finite sample factors for n = 2:9.

2010-12-02  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-9

	* R/mc.c: fixed several bugs, consequent use of eps[0] and eps[1]
	to avoid numerical problems, fixed memory corruption bug that
	caused segfaults from time to time.

	* tests/mc-etc.R: see below
	* tests/mc-etc.Rout.save: see below
	* tests/mc-strict: updated tests and results

	* man/mc.Rd: see below
	* R/mc.R (mc.default): updated eps1 and eps2 defaults.

	* inst/doc/lmrob_simulation.Rnw: minor cosmetic changes
	* inst/doc/graphics.functions.R: added some helper functions to
	ease working with color palettes used by ggplot2.

2006-10-27  Andreas Ruckstuhl  <rks@zhwin.ch>
	and
2010-10-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-8

	* R/lmrobPredict.R, R/glmrobPredict.R: new more careful prediction
	methods, now documented in
	* man/predict.lmrob.Rd,	man/predict.glmrob.Rd:
	and no longer in
	* man/summary.lmrob.Rd:

2010-10-13  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-7

	* R/lmrob.MM.R (lmrob.psifun, lmrob.rhofun, lmrob.wgtfun):