@@ -1,6 +1,6 @@
 Package: robustbase
 Version: 0.7-0
-Date: 2010-12-02
+Date: 2010-12-04
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
