@@ -1,11 +1,14 @@
 \name{Qn}
 \alias{Qn}
+\alias{Qn.old}
 \alias{s_Qn}
 %
 \title{Robust Location-Free Scale Estimate More Efficient than MAD}
 \description{
   Compute the robust scale estimator \eqn{Q_n}{Qn}, an efficient
   alternative to the MAD.
+
+  See the references for more.
 }
 \usage{
 Qn(x, constant = 2.21914, finite.corr = missing(constant))
@@ -16,14 +19,19 @@ s_Qn(x, mu.too = FALSE, \dots)
   \item{x}{numeric vector of observations.}
   \item{constant}{number by which the result is multiplied; the default
     achieves consistency for normally distributed data.  Note that until
-    2010, \dQuote{thanks} to a typo in the very first papers, a slightly
+    Nov.~2010, \dQuote{thanks} to a typo in the very first papers, a slightly
     wrong default constant, 2.2219, was used instead of the correct one
     which is equal to \code{1 / (sqrt(2) * qnorm(5/8))}.
 
-    The corre
+    If you need the old slightly off version for historical
+    reproducibility, you can use \code{Qn.old()}.
+
+    Note that the relative difference is only about 1 in 1000, and that
+    the correction should not affect the finite sample corrections for
+    \eqn{n \le 9}{n <= 9}.
   }
   \item{finite.corr}{logical indicating if the finite sample bias
-    correction factor should be applied.  Default to \code{TRUE} unless
+    correction factor should be applied.  Defaults to \code{TRUE} unless
     \code{constant} is specified.}
   \item{mu.too}{logical indicating if the \code{\link[stats]{median}(x)} should
     also be returned for \code{s_Qn()}.}
@@ -40,9 +48,9 @@ s_Qn(x, mu.too = FALSE, \dots)
   (\eqn{\mu}) and scale; this is typically only useful for
   \code{\link{covOGK}(*, sigmamu = s_Qn)}.
 }
-\details{
-  ............  FIXME ........
-}
+% \details{
+%   ............  FIXME ........
+% }
 \references{
   Rousseeuw, P.J. and Croux, C. (1993)
   Alternatives to the Median Absolute Deviation,
